version 1.1.8 2013-07-27
  * Added timeline showing population vs time graphs (with option -T)
  * Install changelog.gz
  * Some installation fixes in Makefile
  * Removed sentence "See HOW TO PLAY" from the manpage description

version 1.1.7 2013-07-22
  * Icons 32x32 and 16x16
  * Fix Hardening problem
  * Added a desktop menu file

version 1.1.6 2013-07-20
  * Separated $(LDFLAGS) and $(LDLIBS) in Makefile (fixed compilation error in Arch Linux)

version 1.1.5 2013-07-20
  * Quit confirmation dialog for singleplayer and multiplayer client.
  * Added max map size to manpage
  * According to changelog standards, '-' points were changed to '*'
  * Fix lintian warning: "hyphen-used-as-minus-sign" in manpage
  * Moved $(LDFLAGS) and -o $@

version 1.1.4 2013-07-17
  * improved man page, automated version number substitution

version 1.1.3 2013-07-16
  * added a manpage

version 1.1.2 2013-07-15
  * bugfix

version 1.1.1 2013-07-14
  * AIO is replaced with simple non-blocking input (for portability).
  * fixed possible segmentation faults when starting a server (error in map generation)
  * optimization -O2 by default